--- a/code/app/src/main/res/values/strings.xml
+++ b/code/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">Meal Clue</string>
+    <string name="login_background">Login Background</string>
+    <string name="welcome">Welcome</string>
+    <string name="email">Email</string>
 </resources>
