--- a/code/app/src/main/res/values/strings.xml
+++ b/code/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="login_background">Login Background</string>
     <string name="welcome">Welcome</string>
     <string name="email">Email</string>
+    <string name="google">Google</string>
 </resources>
