--- a/code/app/src/main/res/values/strings.xml
+++ b/code/app/src/main/res/values/strings.xml
@@ -4,4 +4,10 @@
     <string name="welcome">Welcome</string>
     <string name="email">Email</string>
     <string name="google">Google</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="profile">Profile</string>
+    <string name="social">Social</string>
+    <string name="plans">Plans</string>
+    <string name="settings">Settings</string>
 </resources>
