--- a/code/app/src/main/res/values/strings.xml
+++ b/code/app/src/main/res/values/strings.xml
@@ -10,4 +10,11 @@
     <string name="social">Social</string>
     <string name="plans">Plans</string>
     <string name="settings">Settings</string>
+    <string name="next_recipe">Next Recipe</string>
+    <string name="previous_recipe">Previous Recipe</string>
+    <string name="recipe_name">Recipe Name</string>
+    <string name="lunch">Lunch</string>
+    <string name="plan_name">Plan Name</string>
+    <string name="cook">Cook</string>
+    <string name="delay">Delay</string>
 </resources>
